--- a/package.json
+++ b/package.json
@@ -11,14 +11,16 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "expo": "~49.0.15",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.72.6",
-    "expo-barcode-scanner": "~12.5.3"
+    "react-native": "0.72.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
