--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "eas-build-pre-install": "./eas-hooks/eas-build-pre-install.sh",
+    "eas-build-on-success": "./eas-hooks/eas-build-on-success.sh"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "expo": "~49.0.15",
     "expo-barcode-scanner": "~12.5.3",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
@@ -22,9 +25,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@config-plugins/detox": "^6.0.0",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.5",
     "@types/react": "~18.2.14",
+    "detox": "^20.16.0",
     "tailwindcss": "3.3.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.3"
   },
   "private": true,
